
|==================|
|= CHANGELOG GEPI =|
|==================|

Gepi-master (Version de développement)
===========================

Bulletins:
- Bulletins 2016: Possibilité d'imprimer le bulletin de fin de cycle.
- Bulletins PDF classiques: Possibilité d'afficher une ligne moyenne générale annuelle.
- Éléments de programmes: Proposition d'une liste d'items prédéfinis.

Absences 2:
- Possibilité de restreindre le décompte des absences sur les bulletins pour la 
  dernière période en limitant l'extraction du début de la période jusqu'à la 
  date du conseil de classe déclaré en scolarité dans Verrouillage des classes.
- Absences du jour : Possibilité de paramétrer l'affichage de toutes les saisies
  par défaut plutôt que seulement les manquements à l'obligation de présence par défaut.

Cahiers de textes:
- Possibilité d'ouvrir les CDT à l'usage exclusif des professeurs 
  (pour proposer un CDT personnel aux professeurs, indépendamment d'un autre CDT
   éventuellement rempli par les professeurs sur un ENT pour les élèves,...).

LSUN:
- Possibilité de n'extraire qu'une ou certaines périodes.

Genèse des classes:
- Possibilité d'utiliser un autre type de profil élève mêlant comportement et niveau scolaire.

Général:
- Possibilité de saisir les modalités d'accompagnement en compte scolarité
  (conditionné par un droit à donner dans Gestion générale/Droits d'accès).
- Possibilité de saisir/corriger les numéros de téléphone et mail en compte cpe et scolarité.
  (conditionné pour les CPE par un droit à donner dans Gestion générale/Droits d'accès).
- Possibilité d'afficher un message invitant les visiteurs à accepter les cookies du Gepi
  (paramétrable en administrateur dans Gestion générale/Options de connexion).
- Possibilité de trier la liste des sauvegardes par taille, par date.

Bibliothèques:
- Mise à jour de HTMLPurifier en version 4.9.3


Gepi-1.7.1 (30/03/2017)
===========================

Absences 2: